# motor_can_driver_base

./: CMakeLists.txt  README.md
Bridge/communication/: interface_can.cpp  interface_can.hpp
Example/: graph.py  main.cpp
Robot/actuators/: ctrl_motor.cpp  ctrl_motor.hpp
Robot/algorithms/kinematic/: data.txt  fakekr.cpp  test
Robot/instances/: prototype_robot.cpp  prototype_robot.h  singlemotor.cpp  singlemotor.h
Utils/cancontrol/: controlcan.h
Utils/cancontrol/include/: can.hpp  jetson_can.hpp
Utils/cancontrol/src/: can.cpp
